Fixed spacing (padding) of navbar on desktop vs mobile

--- a/style.css
+++ b/style.css
@@ -54,7 +54,12 @@ html{scroll-behavior:smooth}
     font-family: 'Poppins', sans-serif;
 }
 
-/* HERO BANNER & NAVBAR SECTION */
+/* NAVBAR SECTION */
+.navbar {
+    padding-top: 2rem;
+}
+
+/* HERO BANNER SECTION */
 .hero-home {
     background: linear-gradient(rgba(0, 0, 0, 0.5),
             rgba(0, 0, 0, 0.5)), url('/images/company/Hero-Banner.jpg') no-repeat center center fixed;
@@ -313,5 +318,12 @@ html{scroll-behavior:smooth}
     }
     #btn-tablet {
         display: none;
+    }
+}
+
+/* NAVBAR */
+@media screen and (max-width: 1024px) {
+    .navbar {
+        padding-top: 0rem;
     }
 }
